fix: projets list grid-gaps

--- a/components/Projects/ProjectsList/ProjectsList.scss
+++ b/components/Projects/ProjectsList/ProjectsList.scss
@@ -43,8 +43,7 @@
     &__row--header {
       display: grid;
       grid-template-columns: 7fr 4fr 4fr 3fr 2fr;
-
-      grid-gap: 10px;
+      grid-column-gap: 10px;
 
       padding-bottom: 30px;
       font-weight: bold;
