--- a/components/Projects/ProjectsListsRow/ProjectsListRow.scss
+++ b/components/Projects/ProjectsListsRow/ProjectsListRow.scss
@@ -73,7 +73,8 @@
   @include media-up(md) {
     grid-template-areas: "title type tech team year";
     grid-template-columns: 7fr 4fr 4fr 3fr 2fr;
-    grid-gap: 10px;
+    grid-column-gap: 10px;
+    grid-row-gap: 0;
 
     &__title {
       position: relative;
